--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "jest": "^27.0.6",
     "prettier": "^2.3.2"
   },
+  "browserslist": [
+    "last 2 Chrome versions"
+  ],
   "scripts": {
     "test": "jest",
     "dev": "parcel src/index.html",
